Fixed overflow on sections

--- a/src/library.sass
+++ b/src/library.sass
@@ -118,6 +118,7 @@ body, html
 /*  Structure
 /*=================================*/
 .library-content 
+  overflow: hidden
   +last-col
   &.no-code
     .library-preview
@@ -128,7 +129,6 @@ body, html
 
 .library-section
   +clearfix
-  overflow-x: hidden
   &[data-code='false'] .library-preview
     width: 100%
     float: none
